2010-03-01 [iwkse]	0.9.9cvs9

	* src/fancy_viewer.c
            Fixes sensitivity on preferences's menu after a
            preference's override

2010-02-27 [iwkse]	0.9.9cvs8

	* src/fancy_viewer.c
	* src/fancy_viewer.h
            Do not use cache for preferences

2010-02-27 [iwkse]	0.9.9cvs7

	* src/fancy_prefs.h
	* src/fancy_prefs.c
	* src/fancy_viewer.h
	* src/fancy_viewer.c
            Better naming for blocking external content preference

2010-02-23 [iwkse]	0.9.9cvs6

	* src/fancy_viewer.c
            Better fix for bug 2120: do not rely on
            the partinfo name because it may be missing
            Also support mid images

2010-02-19 [iwkse]	0.9.9cvs5

	* src/fancy_viewer.c
            A better check to WebKit's version

2010-02-19 [iwkse]	0.9.9cvs4

	* src/fancy_viewer.c
            Add support for internal images as cid
            fix bug 2120

2010-02-10 [iwkse]	0.9.9cvs3

	* configure.ac
	* src/Makefile.am
            Add a version check to libsoup-gnome
            Commit the forgotten Makefile.am

2010-02-09 [sal]	0.9.9cvs2

	* src/fancy_viewer.c
	* src/fancy_viewer.h
            Add support for libsoup-gnome
            Patch by nebojsa with slight change

2010-01-31 [paul]	0.9.9cvs1

	* src/fancy_prefs.c
		add missing include, remove unneeded include: fix non-
		translation of GUI

2010-01-08 [paul]	0.9.9

	0.9.9 released.

2010-01-08 [paul]	0.9.8cvs4

	* configure.ac
	* po/ca.po
	* po/nl.po
	* po/sk.po
		added by Miquel Oliete, Marcel Pol, and Slavko
	* po/cs.po
	* po/fi.po
	* po/hu.po
	* po/id.po
	* po/ja.po
		updated by David Vachulka, Tommi Pirinen, Pader Rezso,
		MSulchan Darmawan, kazken3

2009-11-20 [iwkse]	0.9.8cvs3

	* src/fancy_viewer.c
                Add fancy_prefs_cache_init

2009-11-20 [iwkse]	0.9.8cvs2

	* src/fancy_viewer.h
	* src/fancy_viewer.c
                Fix a bug related to blocking links preference.
                Add a simple cache mechanism for Webkit settings.

2009-11-07 [iwkse]	0.9.8cvs1
