@@ -42,3 +42,4 @@
 ( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/fancy_prefs.h;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/fancy_prefs.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/fancy_viewer.h;  cvs diff -u -r 1.1.2.30 -r 1.1.2.31 src/fancy_viewer.c;  ) > 0.9.9cvs7.patchset
 ( cvs diff -u -r 1.1.2.31 -r 1.1.2.32 src/fancy_viewer.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/fancy_viewer.h;  ) > 0.9.9cvs8.patchset
 ( cvs diff -u -r 1.1.2.32 -r 1.1.2.33 src/fancy_viewer.c;  ) > 0.9.9cvs9.patchset
+( cvs diff -u -r 1.1.2.33 -r 1.1.2.34 src/fancy_viewer.c;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/fancy_viewer.h;  ) > 0.9.9cvs10.patchset
