@@ -1,3 +1,12 @@
+2010-03-03 [iwkse]	0.9.9cvs10
+
+	* src/fancy_viewer.c
+	* src/fancy_viewer.h
+			Subscribe feed from menu
+			Note: is being used here to check for
+			RRSyl the API plugin_get_loaded_by_name 
+			introduced in 3.7.5cvs27 which may be removed later.
+
 2010-03-01 [iwkse]	0.9.9cvs9
 
 	* src/fancy_viewer.c
